@@ -31,6 +31,7 @@ export(
        magic,
        make.filter,
        make.section,
+       matlab2POSIXt,
        oce.axis.POSIXct,
        oce.as.POSIXlt,
        oce.colors.gebco,
