@@ -555,7 +555,7 @@ plot.adcp <- function(x, which=1:4, col=oce.colors.palette(128, 1), zlim,
             imagep(x=tt, y=x$data$ss$distance, z=x$data$ma[[ma.names[which[w]]]],
                    zlim=zlim,
                    col=col,
-                   ylab="Distance",
+                   ylab=resizable.label("distance"),
                    xlab="Time",
                    zlab=ma.names[which[w]],
                    draw.time.range=TRUE,
