@@ -1,4 +1,5 @@
 0.1-77
+- add matlab2POSIXt()
 - add imagep(), and make plot.adcp() use it
 - plot.pt(): add plim and Tlim arguments
 - gravity(): give default for latitude argument
